[WEBWISE-STUDIO] Updates

--- a/index.html
+++ b/index.html
@@ -2,10 +2,80 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Marcheto V3 - Creato con Webwise Studio" />
-    <title>Marcheto V3</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Marcheto - Macelleria e Griglieria a Malonno | Carni Fresche e Brace</title>
+    <meta name="description" content="Marcheto è la macelleria e griglieria di Malonno (Brescia) dove gustare carni fresche selezionate, tagli pregiati alla brace e street food di qualità. Tradizione e passione dal cuore della Valle Camonica." />
+    <meta name="keywords" content="macelleria malonno, griglieria brescia, carne alla brace, bistecca fiorentina, street food carne, valle camonica ristorante, carne fresca brescia, tagliata manzo, picanha, asado argentino" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://marcheto.it/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://marcheto.it/" />
+    <meta property="og:title" content="Marcheto - Macelleria e Griglieria a Malonno" />
+    <meta property="og:description" content="Marcheto è la macelleria e griglieria di Malonno (Brescia) dove gustare carni fresche selezionate, tagli pregiati alla brace e street food di qualità." />
+    <meta property="og:image" content="https://marcheto.it/og-image.jpg" />
+    <meta property="og:site_name" content="Marcheto" />
+    <meta property="og:locale" content="it_IT" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://marcheto.it/" />
+    <meta name="twitter:title" content="Marcheto - Macelleria e Griglieria a Malonno" />
+    <meta name="twitter:description" content="Marcheto è la macelleria e griglieria di Malonno (Brescia) dove gustare carni fresche selezionate, tagli pregiati alla brace e street food di qualità." />
+    <meta name="twitter:image" content="https://marcheto.it/og-image.jpg" />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Restaurant",
+      "name": "Marcheto",
+      "alternateName": "Marcheto - Macelleria e Griglieria",
+      "description": "Marcheto è la macelleria e griglieria di Malonno (Brescia) dove gustare carni fresche selezionate, tagli pregiati alla brace e street food di qualità. Tradizione e passione dal cuore della Valle Camonica.",
+      "url": "https://marcheto.it",
+      "telephone": "+39 0364 657048",
+      "email": "info@marcheto.it",
+      "servesCuisine": ["Italiana", "Griglieria", "Carne alla brace"],
+      "priceRange": "€€",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Via Nazionale 133",
+        "addressLocality": "Malonno",
+        "addressRegion": "Lombardia",
+        "postalCode": "25040",
+        "addressCountry": "IT"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 46.1167,
+        "longitude": 10.3167
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday", "Tuesday", "Thursday", "Friday", "Saturday", "Sunday"],
+          "opens": "09:00",
+          "closes": "22:00"
+        }
+      ],
+      "image": "https://marcheto.it/og-image.jpg",
+      "sameAs": [
+        "https://facebook.com/marcheto",
+        "https://instagram.com/marcheto"
+      ],
+      "hasMenu": {
+        "@type": "Menu",
+        "url": "https://marcheto.it/menu"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
