--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- SEO Meta Tags -->
     <title>Marcheto - Macelleria e Griglieria a Malonno | Carni Fresche e Brace</title>
-    <meta name="description" content="Marcheto è la macelleria e griglieria di Malonno (Brescia) dove gustare carni fresche selezionate, tagli pregiati alla brace e street food di qualità. Tradizione e passione dal cuore della Valle Camonica." />
+    <meta name="description" content="Macelleria e griglieria a Malonno (Brescia). Carni fresche selezionate, tagli pregiati alla brace e street food. Tradizione dalla Valle Camonica." />
     <meta name="keywords" content="macelleria malonno, griglieria brescia, carne alla brace, bistecca fiorentina, street food carne, valle camonica ristorante, carne fresca brescia, tagliata manzo, picanha, asado argentino" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://marcheto.it/" />
